[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Menu Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Game Logic Scripts/CameraController.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Menu Scripts/MenuGUIController.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Game GUI/Menu.png" type="Texture" id=4]
[ext_resource path="res://Sprites/download.png" type="Texture" id=5]
[ext_resource path="res://Sprites/boat_Icon.PNG" type="Texture" id=6]

[node name="Main Menu" type="Node2D" groups=[
"Game Object",
]]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 520.0
margin_top = 1880.0
margin_right = -520.0
mouse_filter = 1
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -517.0
margin_top = -200.0
margin_right = 563.0
margin_bottom = -2.0
mouse_filter = 1

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Control/Panel"]
margin_right = 529.0
margin_bottom = 100.0
rect_scale = Vector2( 2.05, 2 )
texture = ExtResource( 4 )

[node name="Button" type="Button" parent="CanvasLayer/Control/Panel/TextureRect2"]
margin_left = 1.96
margin_top = 2.78
margin_right = 105.96
margin_bottom = 96.78
mouse_filter = 1
flat = true

[node name="New Map" type="Button" parent="CanvasLayer/Control/Panel"]
anchor_right = 0.27
margin_left = 861.0
margin_top = 3.0
margin_right = 789.17
margin_bottom = 192.0
text = "New Map"

[node name="Loading Screen" type="Panel" parent="CanvasLayer/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -521.0
margin_top = -1877.0
margin_right = 520.0

[node name="Label" type="Label" parent="CanvasLayer/Control/Loading Screen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -7.0
margin_right = 108.0
margin_bottom = 7.0
text = "Generating new map. Please wait."
align = 1

[node name="Map" type="Node2D" parent="."]

[node name="background" type="Sprite" parent="Map"]
position = Vector2( -102400, -102400 )
scale = Vector2( 100, 100 )
z_index = -1
texture = ExtResource( 5 )
centered = false

[node name="mapArea" type="RigidBody2D" parent="Map"]
editor/display_folded = true
mode = 1

[node name="mapPolygon1" type="CollisionPolygon2D" parent="Map/mapArea"]
position = Vector2( -102400, -102400 )
scale = Vector2( 100, 100 )
polygon = PoolVector2Array( 543.126, 419.964, 543.023, 430.666, 544.052, 431.386, 544.052, 436.634, 540.656, 439.722, 539.215, 439.824, 537.775, 441.574, 538.083, 443.22, 537.878, 445.484, 534.585, 450.218, 534.688, 452.173, 539.627, 466.065, 539.936, 467.712, 538.701, 468.329, 538.907, 474.709, 535.511, 476.253, 534.07, 481.398, 535.202, 485.72, 537.466, 489.363, 537.672, 491.73, 539.833, 491.936, 541.376, 493.994, 543.949, 494.2, 547.962, 494.92, 548.065, 492.245, 546.419, 490.804, 543.64, 491.113, 541.068, 488.746, 541.068, 486.482, 538.804, 484.218, 537.981, 482.263, 537.981, 479.999, 543.023, 476.809, 543.023, 469.194, 543.846, 468.37, 543.229, 465.489, 543.023, 462.608, 541.068, 460.447, 540.965, 457.462, 539.01, 454.375, 538.804, 450.259, 540.656, 447.995, 540.759, 445.937, 541.582, 445.217, 541.582, 443.261, 547.036, 438.116, 548.683, 438.096, 548.991, 439.742, 550.432, 439.948, 552.079, 441.183, 553.314, 441.08, 554.24, 439.742, 556.195, 442.109, 558.356, 442.109, 561.34, 439.331, 561.752, 436.449, 563.09, 434.185, 567.72, 434.082, 570.19, 430.069, 572.454, 429.143, 572.968, 425.85, 577.805, 419.264, 578.217, 417.206, 574.924, 414.119, 577.085, 412.987, 583.876, 412.472, 586.758, 408.047, 588.507, 408.562, 597.974, 408.87, 600.959, 407.43, 606.783, 403.622, 609.047, 401.77, 608.944, 397.242, 607.812, 395.493, 607.812, 393.846, 609.87, 392.817, 611.002, 390.142, 613.266, 389.524, 615.324, 385.82, 619.338, 385.82, 622.219, 388.083, 627.673, 387.466, 627.57, 385.202, 635.7, 373.677, 635.7, 370.384, 631.686, 359.579, 639.713, 348.671, 639.816, 344.657, 636.626, 340.541, 636.83, 336.141, 634.682, 334.498, 639.104, 325.907, 645.547, 326.033, 649.085, 321.991, 651.738, 320.853, 654.77, 317.569, 656.791, 315.421, 657.044, 306.072, 654.644, 302.281, 661.34, 293.816, 667.783, 298.491, 673.595, 296.596, 678.143, 301.271, 679.533, 305.566, 682.312, 305.566, 683.576, 307.967, 687.619, 307.967, 700.379, 303.671, 702.78, 306.324, 703.032, 308.725, 711.876, 307.967, 716.045, 308.346, 728.427, 300.892, 729.185, 295.585, 729.817, 293.564, 727.037, 289.016, 733.733, 282.572, 734.87, 276.508, 729.834, 264.789, 726.025, 262.694, 728.691, 259.076, 728.691, 252.791, 733.071, 250.697, 736.499, 250.316, 739.927, 244.412, 749.639, 254.315, 760.495, 252.22, 767.922, 263.837, 765.065, 274.121, 766.017, 278.12, 769.826, 278.691, 771.54, 283.262, 769.636, 294.117, 772.302, 296.973, 780.491, 304.781, 786.013, 300.782, 790.965, 300.401, 800.296, 309.352, 806.009, 306.686, 814.96, 306.495, 815.531, 302.877, 818.578, 296.973, 822.958, 293.926, 835.527, 297.354, 838.384, 292.974, 846.001, 288.594, 841.05, 280.786, 843.526, 270.502, 828.862, 264.218, 829.243, 253.172, 818.197, 248.602, 804.867, 251.078, 793.631, 240.984, 791.726, 236.604, 792.679, 228.796, 800.867, 225.178, 803.914, 214.894, 806.009, 208.991, 802.581, 204.61, 800.296, 198.897, 805.438, 191.47, 812.103, 184.995, 807.21, 176.441, 793.715, 175.201, 786.269, 178.923, 785.494, 172.098, 781.461, 171.788, 787.355, 163.722, 787.355, 157.052, 781.616, 149.607, 780.995, 144.798, 783.787, 136.112, 786.579, 133.01, 793.404, 131.769, 797.592, 136.732, 804.417, 139.369, 814.965, 130.218, 828.46, 134.716, 831.097, 138.128, 829.856, 141.231, 833.269, 144.488, 833.889, 146.194, 840.869, 148.211, 847.074, 149.607, 851.262, 152.399, 865.067, 143.868, 872.823, 151.623, 877.321, 145.884, 885.026, 145.089, 884.436, 137.131, 886.352, 129.763, 903.593, 125.048, 909.192, 130.353, 909.34, 134.479, 898.288, 147.004, 898.288, 153.635, 904.035, 155.109, 901.677, 164.245, 914.202, 173.529, 913.37, 180.117, 910.311, 183.841, 914.567, 191.421, 920.551, 195.544, 934.116, 197.273, 943.026, 193.017, 946.085, 186.633, 953.932, 191.421, 958.32, 186.367, 965.236, 190.889, 970.556, 190.357, 970.954, 194.613, 967.231, 198.071, 979.2, 204.72, 991.302, 204.321, 990.77, 208.976, 994.228, 213.63, 994.361, 217.62, 989.706, 221.477, 981.727, 225.201, 979.31, 231.221, 976.531, 234.759, 979.689, 241.834, 987.396, 243.981, 983.606, 252.825, 986.259, 256.363, 977.668, 256.237, 976.404, 265.586, 975.52, 274.3, 961.622, 280.744, 956.695, 288.072, 961.496, 293.378, 954.168, 305.001, 958.59, 314.603, 957.958, 321.552, 949.241, 331.912, 942.924, 331.533, 937.491, 327.995, 931.872, 333.555, 926.95, 335.278, 915.628, 330.601, 908.983, 334.785, 907.507, 339.954, 906.276, 351.275, 913.167, 358.539, 907.507, 366.415, 903.077, 367.399, 908.737, 372.814, 908.491, 378.228, 899.139, 381.428, 897.416, 388.811, 889.786, 392.503, 886.341, 388.319, 880.68, 398.41, 877.481, 401.855, 871.82, 400.625, 851.885, 414.899, 855.33, 425.482, 843.025, 439.265, 830.719, 437.542, 823.828, 447.14, 814.968, 445.171, 810.291, 446.894, 805.369, 456.493, 808.907, 461.871, 814.075, 477.376, 805.215, 482.544, 802.508, 488.943, 804.969, 492.143, 798.078, 497.311, 794.14, 501.987, 782.08, 503.464, 776.174, 509.371, 777.65, 517.739, 775.189, 522.415, 771.005, 519.707, 771.497, 527.337, 770.267, 533.736, 776.174, 551.702, 786.51, 557.117, 792.171, 567.7, 794.878, 575.575, 788.726, 581.236, 775.189, 580.252, 769.529, 579.021, 762.883, 582.959, 764.36, 599.449, 769.282, 605.848, 760.422, 622.56, 765.099, 634.127, 773.466, 631.42, 778.389, 638.803, 777.158, 650.371, 785.28, 655.293, 785.526, 664.399, 796.109, 674.736, 802.508, 669.076, 806.446, 674.49, 812.353, 676.213, 805.707, 694.179, 810.876, 704.024, 813.583, 705.747, 821.459, 700.578, 821.951, 704.516, 827.365, 704.27, 827.612, 712.392, 832.534, 715.099, 827.365, 723.221, 829.827, 731.187, 832.78, 736.109, 843.855, 739.063, 841.886, 743.493, 845.332, 746.938, 840.902, 751.122, 831.796, 756.537, 828.104, 763.92, 831.303, 774.011, 848.039, 771.796, 853.946, 774.749, 850.746, 779.179, 853.7, 782.133, 842.871, 792.469, 841.886, 804.529, 850.992, 805.513, 855.669, 809.944, 870.189, 800.837, 871.42, 791.239, 868.713, 783.855, 874.62, 776.226, 878.311, 772.042, 883.726, 768.596, 889.633, 770.811, 897.262, 782.625, 893.078, 789.516, 894.801, 795.915, 905.384, 803.052, 905.63, 812.159, 890.371, 824.063, 883.234, 824.555, 878.311, 820.371, 865.267, 829.723, 864.529, 837.845, 865.759, 845.474, 861.575, 853.104, 856.407, 852.612, 853.454, 864.918, 848.531, 868.363, 844.347, 863.687, 834.749, 863.687, 833.272, 867.625, 822.689, 874.27, 811.86, 873.039, 808.415, 868.363, 802.754, 873.531, 794.878, 871.809, 788.479, 865.902, 788.972, 856.55, 782.819, 855.319, 780.112, 851.873, 771.744, 856.057, 765.591, 864.671, 757.469, 859.995, 754.762, 855.319, 750.578, 856.304, 747.624, 863.195, 735.073, 856.057, 721.536, 870.086, 716.368, 865.656, 712.132, 868.609, 709.917, 859.011, 705.486, 857.288, 698.841, 860.98, 694.904, 855.811, 691.704, 849.905, 694.165, 842.767, 687.766, 839.322, 687.028, 833.907, 682.106, 830.708, 670.538, 838.583, 661.924, 833.169, 662.416, 822.586, 657.986, 818.648, 651.587, 818.648, 643.219, 814.956, 638.297, 820.863, 639.282, 829.723, 646.419, 837.353, 647.403, 844.736, 642.235, 848.182, 628.453, 847.197, 622.792, 844.244, 618.608, 850.397, 614.178, 856.55, 602.118, 861.472, 591.781, 859.749, 592.52, 849.412, 581.445, 842.275, 571.108, 855.073, 560.577, 859.011, 554.424, 854.581, 552.701, 843.259, 556.393, 831.2, 557.132, 825.539, 546.056, 815.448, 546.795, 803.881, 535.966, 800.189, 531.782, 795.513, 525.383, 797.728, 518.738, 796.498, 516.03, 799.451, 512.093, 801.42, 516.523, 808.803, 507.662, 816.925, 501.51, 817.664, 494.126, 813.972, 492.403, 803.881, 487.973, 799.697, 490.434, 786.161, 499.295, 777.547, 509.385, 782.223, 516.03, 777.301, 524.644, 766.718, 512.339, 748.259, 496.095, 757.365, 482.313, 753.182, 476.652, 764.503, 476.16, 771.64, 465.577, 771.886, 457.209, 762.534, 445.888, 761.303, 437.766, 769.425, 442.196, 780.5, 437.274, 790.837, 426.937, 794.775, 422.999, 790.345, 416.354, 781.485, 408.478, 781.485, 399.618, 781.977, 395.926, 775.086, 388.543, 773.117, 385.097, 761.057, 376.272, 754.658, 370.119, 752.935, 365.197, 753.182, 364.459, 756.627, 360.521, 759.827, 355.106, 756.135, 348.953, 757.119, 344.277, 752.197, 341.324, 748.505, 342.308, 744.075, 349.446, 732.754, 341.324, 718.479, 324.342, 717.249, 320.65, 710.604, 317.697, 700.747, 310.313, 693.609, 295.546, 693.363, 284.964, 679.088, 271.427, 682.288, 268.228, 677.12, 266.013, 667.521, 255.059, 667.029, 244.969, 654.723, 248.168, 639.218, 260.72, 637.003, 259.243, 629.373, 262.689, 623.467, 275.241, 622.974, 281.394, 614.853, 275.979, 602.055, 280.163, 596.148, 271.057, 584.088, 275.733, 574.736, 285.085, 574.736, 286.562, 570.161, 289.023, 562.777, 294.192, 558.84, 303.052, 560.562, 301.575, 553.671, 304.282, 548.257, 297.637, 543.088, 296.407, 536.443, 290.254, 534.72, 284.839, 529.798, 284.101, 521.922, 289.762, 518.723, 297.391, 516.508, 312.896, 511.832, 314.127, 500.757, 305.267, 493.619, 300.098, 480.329, 305.759, 470.238, 296.653, 458.425, 283.855, 460.148, 277.21, 449.319, 270.811, 451.287, 261.458, 449.811, 254.813, 460.886, 257.521, 470.238, 250.383, 476.145, 241.769, 479.098, 239.8, 489.189, 227.248, 494.111, 221.096, 494.604, 209.528, 484.513, 209.528, 476.883, 215.435, 469.254, 203.621, 459.655, 208.79, 453.503, 205.837, 449.811, 203.621, 446.119, 195.746, 445.873, 191.562, 439.72, 191.562, 432.583, 197.469, 427.66, 190.085, 416.002, 182.948, 415.756, 178.272, 410.096, 171.38, 413.295, 166.458, 412.065, 163.013, 423.632, 152.016, 424.124, 141.679, 418.464, 138.972, 410.342, 124.205, 407.142, 121.005, 397.544, 121.744, 394.837, 108.453, 390.406, 106.977, 381.054, 114.852, 373.917, 113.622, 365.549, 103.531, 357.181, 93.9327, 361.119, 88.7643, 358.904, 86.5493, 345.614, 76.9508, 338.632, 76.9508, 324.603, 78.1814, 320.173, 74.4897, 316.974, 72.7669, 308.36, 75.4741, 302.453, 86.7954, 293.347, 89.0104, 284.979, 77.1969, 276.365, 78.9197, 257.702, 70.5518, 254.502, 71.5363, 244.412, 73.7513, 239.489, 79.412, 238.259, 79.9042, 219.8, 63.9067, 216.847, 58.9844, 211.186, 53.816, 202.326, 42.987, 202.326, 43.0109, 197.404, 35.1352, 196.665, 39.0731, 192.728, 35.1352, 189.528, 39.3192, 187.313, 43.257, 187.313, 46.9487, 183.867, 52.3633, 180.176, 49.656, 169.593, 57.0394, 162.119, 60.2389, 161.38, 59.7467, 156.95, 56.5472, 151.29, 59.7467, 147.844, 65.8996, 144.891, 72.2985, 143.906, 72.0524, 137.999, 76.7286, 135.784, 76.7286, 130.862, 70.0835, 127.417, 67.1301, 121.264, 59.0083, 122.986, 53.3477, 120.771, 50.6404, 116.834, 55.3166, 109.942, 54.086, 105.512, 49.4099, 107.973, 47.1948, 101.328, 50.3943, 87.546, 36.6119, 80.4086, 39.5653, 70.87, 30.4591, 61.5176, 35.6275, 51.9191, 42.5187, 48.9658, 42.0264, 42.0745, 46.4565, 37.3984, 59.7467, 31.2455, 66.1457, 31.4916, 68.1146, 35.6756, 81.897, 30.5072, 86.8193, 35.4295, 90.511, 43.3051, 102.325, 43.7973, 105.77, 49.2119, 105.524, 55.6108, 103.063, 62.9943, 109.954, 65.9477, 111.431, 69.8855, 108.477, 77.515, 115.615, 80.7145, 118.814, 90.0669, 129.643, 91.2975, 134.073, 102.865, 147.363, 101.88, 152.04, 104.095, 153.516, 108.772, 154.009, 112.956, 163.361, 114.186, 167.545, 117.139, 173.452, 124.769, 171.729, 130.184, 156.224, 133.629, 153.27, 141.751, 155.731, 148.642, 169.514, 150.611, 177.389, 151.103, 185.265, 149.381, 195.356, 154.549, 201.509, 163.655, 199.294, 171.531, 186.496, 173.5, 185.019, 184.821, 174.436, 186.052, 168.283, 184.329, 162.869, 189.989, 157.7, 193.189, 164.345, 198.111, 163.607, 202.787, 170.99, 207.464, 184.035, 210.417, 191.104, 221.715, 190.858, 224.668, 185.936, 228.606, 190.612, 235.743, 193.566, 240.173, 198.242, 243.619, 211.286, 240.666, 214.731, 243.373, 217.439, 248.787, 230.483, 243.373, 234.174, 240.173, 229.498, 231.559, 233.436, 232.544, 236.882, 224.176, 243.527, 229.344, 248.203, 227.621, 249.68, 236.235, 255.34, 244.357, 266.415, 243.865, 272.814, 236.235, 276.014, 224.176, 289.304, 220.238, 295.457, 225.899, 297.18, 228.852, 312.439, 224.176, 319.576, 227.129, 322.284, 231.313, 330.159, 227.129, 334.097, 230.329, 335.081, 219.5, 352.802, 221.469, 358.462, 234.267, 363.973, 238.943, 372.833, 237.712, 380.463, 242.881, 383.908, 249.28, 393.999, 249.033, 404.336, 255.432, 408.027, 262.078, 405.074, 270.692, 397.691, 275.614, 389.569, 275.368, 385.385, 285.705, 380.216, 287.427, 373.571, 288.904, 374.31, 295.549, 369.387, 300.717, 373.817, 305.394, 377.263, 312.285, 376.279, 318.564, 373.325, 322.01, 375.048, 332.347, 379.724, 338.5, 395.229, 343.422, 400.398, 346.622, 404.336, 353.267, 424.517, 356.958, 425.748, 366.803, 435.346, 368.033, 441.007, 375.909, 448.144, 371.725, 454.543, 370.495, 458.973, 372.217, 461.926, 376.894, 471.279, 380.831, 478.662, 375.663, 484.077, 376.894, 487.768, 376.155, 486.784, 368.772, 490.476, 362.127, 499.828, 362.127, 503.028, 359.419, 507.458, 363.111, 513.364, 362.373, 518.533, 373.448, 522.183, 373.94, 534.735, 371.479, 545.072, 361.142, 542.857, 351.79, 554.424, 337.515, 563.531, 341.699, 569.929, 349.083, 567.961, 354.005, 575.344, 358.681, 577.559, 361.142, 575.098, 367.541, 567.961, 372.71, 570.914, 379.355, 571.652, 381.324, 570.422, 385.262, 565.992, 390.676, 561.315, 394.368, 557.132, 395.352, 552.948, 393.137, 549.01, 392.153, 544.58, 388.953, 538.673, 391.66, 532.274, 393.137, 525.629, 394.122, 525.875, 403.228, 521.445, 407.904, 509.878, 409.627, 504.709, 409.381, 498.802, 406.181, 496.095, 400.028, 489.204, 400.767, 480.836, 399.782, 468.284, 392.891, 449.826, 398.059, 449.826, 402.49, 446.38, 406.427, 454.01, 412.826, 455.24, 417.749, 460.162, 420.702, 465.577, 422.917, 466.028, 427.645, 466.093, 431.602, 467.066, 432.964, 467.066, 436.595, 465.964, 437.374, 465.704, 442.692, 469.077, 445.935, 471.217, 443.211, 474.719, 448.27, 479.843, 448.399, 485.42, 442.303, 487.366, 446.389, 490.803, 446.778, 496.251, 450.604, 500.791, 445.092, 506.693, 441.784, 510.066, 436.855, 515.449, 435.817, 519.996, 435.882, 521.034, 436.725, 529.465, 428.099, 533.097, 419.538, 534.978, 419.863, 535.108, 420.771, 537.443, 419.733 )

[node name="mapPolygon2" type="CollisionPolygon2D" parent="Map/mapArea"]
position = Vector2( -102400, -102400 )
scale = Vector2( 100, 100 )
polygon = PoolVector2Array( 507.818, 341.436, 501.972, 343.306, 498.232, 342.371, 489.814, 339.331, 487.944, 330.447, 493.088, 328.81, 494.257, 321.094, 496.361, 317.353, 494.491, 313.612, 494.724, 307.533, 485.84, 305.897, 483.502, 304.26, 472.045, 309.871, 465.966, 306.13, 458.718, 300.753, 456.847, 303.792, 447.963, 305.663, 441.182, 302.156, 440.013, 290.232, 444.923, 285.322, 443.286, 279.009, 435.337, 270.825, 438.143, 268.721, 438.844, 260.07, 447.261, 260.538, 452.873, 263.577, 458.718, 248.614, 467.836, 253.757, 472.279, 249.783, 476.721, 243.002, 479.527, 235.988, 484.203, 235.053, 483.502, 222.427, 494.491, 212.373, 502.674, 214.477, 507.35, 217.985, 519.04, 208.165, 525.353, 207.463, 528.86, 209.801, 533.303, 223.362, 533.537, 231.078, 533.537, 243.002, 542.655, 252.588, 547.799, 249.081, 555.515, 241.833, 566.27, 247.912, 567.906, 242.535, 574.219, 238.326, 577.96, 236.923, 578.194, 227.103, 580.065, 217.985, 573.752, 212.139, 572.115, 202.319, 581.935, 194.837, 586.611, 196.007, 595.73, 193.668, 601.809, 200.449, 605.316, 204.891, 613.032, 203.488, 622.384, 203.956, 628.463, 213.075, 637.582, 209.1, 640.621, 209.801, 644.596, 216.114, 643.894, 224.999, 651.376, 228.506, 654.65, 232.948, 657.221, 239.963, 654.883, 245.34, 645.765, 245.574, 644.362, 251.419, 635.945, 251.887, 631.035, 251.887, 625.657, 256.095, 620.28, 263.344, 614.434, 264.98, 607.888, 264.98, 601.575, 259.135, 596.431, 259.369, 591.287, 258.2, 581.234, 265.915, 571.881, 267.084, 568.14, 264.279, 564.867, 272.462, 560.425, 275.034, 560.425, 277.84, 554.579, 279.009, 549.436, 276.671, 543.123, 283.685, 540.551, 288.361, 534.004, 291.167, 536.576, 297.246, 536.81, 300.987, 531.432, 306.13, 526.289, 311.976, 520.911, 312.911, 514.13, 306.832, 507.818, 311.274, 508.051, 316.184, 505.713, 319.925, 507.35, 324.835, 510.623, 335.357 )

[node name="mapPolygon3" type="CollisionPolygon2D" parent="Map/mapArea"]
position = Vector2( -102400, -102400 )
scale = Vector2( 100, 100 )
polygon = PoolVector2Array( 729.503, 889.472, 722.454, 901.442, 727.641, 912.214, 727.375, 915.007, 719.129, 920.991, 720.459, 926.444, 724.848, 932.428, 731.896, 934.822, 737.881, 938.679, 745.594, 937.216, 748.919, 932.428, 759.691, 936.551, 766.607, 934.024, 767.538, 927.641, 765.543, 920.991, 762.617, 918.597, 756.633, 915.406, 751.047, 913.411, 751.047, 906.894, 747.057, 901.309, 738.679, 892.265, 735.62, 894.26 )

[node name="mapPolygon4" type="CollisionPolygon2D" parent="Map/mapArea"]
position = Vector2( -102400, -102400 )
scale = Vector2( 100, 100 )
polygon = PoolVector2Array( 202.745, 972.605, 195.044, 965.574, 194.04, 955.53, 179.643, 944.481, 174.621, 930.754, 167.59, 925.397, 160.224, 920.71, 156.206, 925.397, 151.854, 928.41, 139.131, 925.062, 127.748, 913.679, 134.444, 902.63, 126.074, 898.278, 126.074, 891.582, 114.69, 886.894, 113.016, 876.18, 107.659, 870.823, 94.6017, 870.823, 87.5707, 864.462, 82.2138, 867.141, 69.1562, 871.828, 64.4689, 871.158, 59.7816, 864.127, 67.1474, 849.396, 67.1474, 839.017, 60.1164, 839.352, 60.4512, 830.312, 60.4512, 826.294, 54.4247, 826.294, 48.733, 819.933, 51.7462, 806.54, 42.3716, 798.84, 41.3672, 784.108, 49.7374, 778.416, 54.0899, 777.077, 54.4247, 761.006, 63.1297, 757.658, 65.8082, 755.649, 63.1297, 748.619, 69.1562, 741.253, 72.8391, 738.574, 85.227, 740.583, 93.2624, 728.195, 100.963, 730.539, 114.69, 732.883, 120.047, 740.248, 132.1, 738.909, 140.805, 747.279, 151.854, 750.293, 154.532, 741.253, 160.559, 748.619, 165.246, 745.605, 168.259, 754.31, 179.643, 761.006, 187.678, 757.993, 200.736, 761.006, 206.093, 766.363, 204.419, 770.716, 214.798, 771.385, 213.458, 779.756, 218.815, 789.465, 215.802, 793.818, 207.767, 795.492, 210.11, 800.849, 208.102, 804.531, 214.128, 810.223, 221.829, 819.598, 227.52, 821.941, 230.199, 832.655, 227.855, 839.686, 224.172, 850.4, 231.873, 858.101, 234.886, 862.118, 232.208, 868.48, 225.177, 873.837, 226.516, 880.533, 235.221, 887.229, 239.239, 891.582, 238.569, 896.269, 248.948, 901.291, 264.014, 900.621, 277.407, 906.313, 280.755, 900.956, 289.125, 897.608, 297.16, 902.63, 295.486, 914.348, 290.799, 919.036, 291.804, 927.406, 290.129, 933.098, 280.42, 939.794, 272.719, 949.838, 266.023, 950.173, 256.314, 959.882, 241.582, 960.887, 232.543, 951.512, 226.851, 955.53, 219.82, 960.552, 217.811, 966.578 )

[node name="mapPolygon5" type="CollisionPolygon2D" parent="Map/mapArea"]
position = Vector2( -102400, -102400 )
scale = Vector2( 100, 100 )
polygon = PoolVector2Array( 473.265, 83.9884, 464.824, 96.8712, 456.161, 96.6491, 444.611, 83.0999, 442.39, 73.3267, 445.055, 69.5507, 437.059, 66.2189, 434.616, 59.7775, 433.505, 42.2301, 437.948, 43.1186, 439.725, 34.6781, 442.834, 36.0108, 445.5, 34.6781, 448.831, 40.6753, 452.385, 39.5647, 458.827, 30.6799, 463.047, 30.6799, 468.822, 33.5675, 473.042, 41.5637, 479.262, 37.3435, 484.148, 38.232, 492.367, 51.1148, 487.48, 65.7746, 492.145, 71.994, 491.478, 77.1027, 487.036, 85.0989, 481.261, 87.3201 )

[node name="mapPolygon6" type="CollisionPolygon2D" parent="Map/mapArea"]
position = Vector2( -102400, -102400 )
scale = Vector2( 100, 100 )
polygon = PoolVector2Array( 417.957, 74.2151, 405.518, 76.4363, 403.297, 70.8834, 397.522, 69.7728, 396.856, 62.8871, 400.854, 56.4457, 401.52, 51.5591, 410.627, 48.6715, 416.846, 56.4457, 419.29, 61.1102 )

[node name="mapPolygon7" type="CollisionPolygon2D" parent="Map/mapArea"]
polygon = PoolVector2Array( 4.2301, -105078, -0.133606, 0.207809, -102407, -3.04639, -102402, -102412, -0.601563, -102403, 0.545898, -105058, -105418, -105246, -104623, 1814.71, 2452.7, 2212.4, 2680.77, -105077 )

[node name="bucket" type="Node" parent="Map"]

[node name="finalBucket" type="Node" parent="Map"]

[node name="Boat" type="Sprite" parent="Map"]
texture = ExtResource( 6 )
[connection signal="pressed" from="CanvasLayer/Control/Panel/TextureRect2/Button" to="CanvasLayer/Control" method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Panel/New Map" to="CanvasLayer/Control" method="_on_New_Map_pressed"]
